[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for Cortex-M microcontrollers"
documentation = "https://docs.rs/cortex-m-rt"
keywords = ["arm", "cortex-m", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rt"
repository = "https://github.com/japaric/cortex-m-rt"
version = "0.3.0"

[dependencies]
r0 = "0.2.1"
cortex-m = "0.3.0"

[dependencies.cortex-m-semihosting]
optional = true
version = "0.1.3"

[features]
default = ["linker-script"]
# generic linker script
linker-script = []
# prints panic messages to the ITM
panic-over-itm = []
# prints panic messages to the host stdout
panic-over-semihosting = ["cortex-m-semihosting"]
